--- a/lin_alg.ipynb
+++ b/lin_alg.ipynb
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -220,7 +220,7 @@
        "       [ 2,  4,  3]])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -249,7 +249,7 @@
        "(3, 3)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -273,7 +273,7 @@
        "array([5, 7, 8])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -309,7 +309,7 @@
        "array([-15.,   8.,   2.])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -334,7 +334,7 @@
        "array([-15.,   8.,   2.])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -358,7 +358,7 @@
        "array([-15.,   8.,   2.])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -413,7 +413,7 @@
        "       [-2,  6,  3]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -439,7 +439,7 @@
        "       [ 90, 103, 114]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -465,7 +465,7 @@
        "       [ 4, 16,  9]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -492,7 +492,7 @@
        "       [ 8, 44, 29]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -590,35 +590,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 4,  5, 15,  3],\n",
-       "       [ 7, 12, 14, 13],\n",
-       "       [ 8,  0,  2,  1],\n",
-       "       [11, 10,  9,  6]])"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A = np.random.permutation(16).reshape(4,4)\n",
-    "A"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "120"
+       "array([[12, 15,  9,  0],\n",
+       "       [ 3,  1,  4, 10],\n",
+       "       [ 6,  8,  7, 13],\n",
+       "       [14, 11,  5,  2]])"
       ]
      },
      "execution_count": 26,
@@ -627,7 +602,8 @@
     }
    ],
    "source": [
-    "A.sum()"
+    "A = np.random.permutation(16).reshape(4,4)\n",
+    "A"
    ]
   },
   {
@@ -642,7 +618,7 @@
     {
      "data": {
       "text/plain": [
-       "array([27, 46, 11, 36])"
+       "120"
       ]
      },
      "execution_count": 27,
@@ -651,7 +627,7 @@
     }
    ],
    "source": [
-    "A.sum(axis=1)"
+    "A.sum()"
    ]
   },
   {
@@ -666,10 +642,34 @@
     {
      "data": {
       "text/plain": [
-       "array([30, 27, 40, 23])"
+       "array([36, 18, 34, 32])"
       ]
      },
      "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.sum(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([35, 35, 25, 25])"
+      ]
+     },
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
    "source": [
     "## Exercise\n",
     "\n",
-    "Write a function `pdsist(xs)` which returns a matrix of the pairwise distance between the collection of row vectors in `xs` using Euclidean distance.\n",
+    "Write a function `pdist(xs)` which returns a matrix of the pairwise distance between the collection of row vectors in `xs` using Euclidean distance.\n",
     "\n",
     "\\begin{align}\n",
     "    d(x, y) = \\sqrt{\\sum{(y-x)^2}}\n",
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -705,6 +705,7 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "xs = np.array([[0.20981496, 0.54777461, 0.9398527 ],\n",
     "       [0.63149939, 0.935947  , 0.29834026],\n",
     "       [0.46302941, 0.25515557, 0.0698739 ],\n",
