--- a/slides/numpy_walkthrough.ipynb
+++ b/slides/numpy_walkthrough.ipynb
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -308,22 +308,17 @@
     {
      "data": {
       "text/plain": [
-       "array([[[0, 0, 0],\n",
-       "        [1, 1, 1],\n",
-       "        [2, 2, 2]],\n",
-       "\n",
-       "       [[0, 1, 2],\n",
-       "        [0, 1, 2],\n",
-       "        [0, 1, 2]]])"
+       "(2, 3, 3)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.indices((3,3))"
+    "import numpy as np\n",
+    "np.indices((3,3)).shape"
    ]
   },
   {
@@ -413,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -752,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -762,11 +757,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.54142345, 0.32565863],\n",
-       "       [0.83166418, 0.35442452]])"
+       "array([[0.35925949, 0.41396617],\n",
+       "       [0.45336104, 0.66876422]])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -825,10 +820,10 @@
     {
      "data": {
       "text/plain": [
-       "array([-2.59577433, -1.47212151,  0.16090415,  0.24718511, -1.34799267])"
+       "array([-0.02958084, -1.25686401, -0.37148912, -0.68799023,  0.4559134 ])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -850,10 +845,10 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.16090415, -1.34799267, -2.59577433,  0.24718511, -1.47212151])"
+       "array([-0.37148912, -0.02958084, -1.25686401,  0.4559134 , -0.68799023])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -939,7 +934,7 @@
        "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -964,7 +959,7 @@
        "0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -988,7 +983,7 @@
        "9"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1024,7 +1019,7 @@
        "       [5, 6, 7, 8, 9]])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,8 +1055,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 19,
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1070,16 +1066,17 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 2, 3, 4])"
+       "array([1, 6])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x[0]"
+    "x[0]\n",
+    "x[:,1]"
    ]
   },
   {
@@ -1184,6 +1181,7 @@
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1525,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1542,7 +1540,7 @@
        "       [28, 29, 30, 31, 32, 33, 34]])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1554,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1567,7 +1565,7 @@
        "array([ 0, 15, 30])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1710,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1787,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1795,15 +1793,14 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'y' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-27-b5f6f6817c47>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0my\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnonzero\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'y' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "array([21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1932,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1942,17 +1939,17 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 2, 4, 6, 8])"
+       "array([0, 1, 2, 3, 4])"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x = np.arange(5)\n",
-    "x + x"
+    "x"
    ]
   },
   {
