--- a/exercises/exercise_1_1.ipynb
+++ b/exercises/exercise_1_1.ipynb
@@ -19,6 +19,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install plotly"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
